fix(front): force frontend to always be in dark mode

--- a/apps/frontend/src/app/theme/styles.css
+++ b/apps/frontend/src/app/theme/styles.css
@@ -30,20 +30,6 @@
     color: theme('colors.gray.50');
   }
 
-  /* If the user prefers dark mode, we of course apply color-scheme: dark, as usual */
-  @media (prefers-color-scheme: dark) {
-    html {
-      color-scheme: dark;
-    }
-  }
-
-  /* If the user prefers light mode, we still enforce color-scheme: dark, despite the user preference */
-  @media (prefers-color-scheme: light) {
-    html {
-      color-scheme: dark;
-    }
-  }
-
   iframe {
     border: none;
   }
